added categories and share

--- a/_site.yml
+++ b/_site.yml
@@ -2,6 +2,12 @@ name: "distill_blog"
 title: "Kisun Yoon's Blog"
 description: |
   Kisun Yoon's Blog
+base_url: https://convexky.github.io/
+creative_commons: CC BY-NC
+collections:
+  posts:
+    share: [facebook]
+    feed_items_max: false
 output_dir: "docs"
 navbar:
   right:
